--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "react-tooltip": "^5.26.0",
     "sass": "^1.70.0",
     "sort-by": "^1.2.0",
     "three": "^0.161.0"
