--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,12 @@ jobs:
     - name: List output files
       run: find dist/ -print
       
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+    - name: 📂 Deploy
+      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       with:
         server: unix.sussex.ac.uk
         username: db596
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: dist/
+        local-dir: ./dist/*
+        remote_path: '/its/home/db596/public_html'
+        sftp_only: true
